# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.43 2009/12/07 11:10:34 ssuominen Exp $

  07 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  amd64 stable wrt #284745

  01 Dec 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.3-r1.ebuild, e2fsprogs-libs-1.41.6.ebuild,
  e2fsprogs-libs-1.41.7.ebuild, e2fsprogs-libs-1.41.8.ebuild,
  e2fsprogs-libs-1.41.9.ebuild:
  Switch to new tc-has-tls function rather than USE=elibc_uclibc.

  29 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  Marked ppc stable for bug #284745.

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  ia64/sparc stable wrt #284745

  23 Nov 2009; Markus Meier <maekke@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  arm stable, bug #284745

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  stable x86, bug 284745

  31 Oct 2009; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.41.9.ebuild:
  Marking e2fsprogs-libs-1.41.9 ppc64 for bug 284745

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> e2fsprogs-libs-1.41.9.ebuild:
  Stable for HPPA (bug #284745).

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  e2fsprogs-libs-1.41.9.ebuild:
  Stable on alpha, bug #284745

*e2fsprogs-libs-1.41.9 (23 Aug 2009)

  23 Aug 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.9.ebuild:
  Version bump #282445 by Marcin Mirosław.

  15 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Rekeyword ~x86-fbsd now that libSM doesn't need libuuid anymore on
  FreeBSD.

  13 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Export VARTEXFONTS=${T}/fonts wrt #281390 to avoid LaTeX sandbox violation.

  22 Jul 2009; Alexis Ballier <aballier@gentoo.org>