@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.43 2009/12/07 11:10:34 ssuominen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.44 2010/03/07 02:34:18 vapier Exp $
+
+*e2fsprogs-libs-1.41.10 (07 Mar 2010)
+
+  07 Mar 2010; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.10.ebuild:
+  Version bump #306589 by Krzysztof Olędzki.
 
   07 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
   e2fsprogs-libs-1.41.9.ebuild:
